--- a/index3.html
+++ b/index3.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index3</title>
-    <link rel="stylesheet" href="css-test/reset2.css" />
-    <link rel="stylesheet" href="css-test/style2.css" />
+    <link rel="stylesheet" href="css/reset2.css" />
+    <link rel="stylesheet" href="css/style2.css" />
 </head>
 <body>
 
