任意のメッセージ

--- a/index3.html
+++ b/index3.html
@@ -18,13 +18,10 @@
             <li class="nav_item"><a href="">お問い合わせ</a></li>
         </ul>
     </div>
-    <div class="main">
-        <div class="title">毎日を笑顔に</div>
-        <div class="relative box">
-            <div class="absolute">
-                <img class="absolute_img" src="img/firstview.jpeg" alt="">
-            </div>
-        </div>
+    <div class="title">毎日を笑顔に</div>
+    <div class="absolute">
+        <img class="absolute_img" src="img/firstview.jpeg" alt="">
     </div>
+    <div class="relative box"></div>
 </body>
 </html>
